--- a/module1/LS_DS_121_Statistics_Probability_Assignment.ipynb
+++ b/module1/LS_DS_121_Statistics_Probability_Assignment.ipynb
@@ -78,11 +78,11 @@
       "metadata": {
         "id": "as5vT-aC8hG_",
         "colab_type": "code",
+        "outputId": "217c280f-b6a4-42ec-ac9d-9b860717e0dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
-        },
-        "outputId": "2000d08e-66fc-4400-96d6-73fc3ecc3a35"
+          "height": 278
+        }
       },
       "source": [
         "headers = [\n",
@@ -113,7 +113,7 @@
         "                       na_values=\"?\")\n",
         "votes_df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +275,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 14
         }
       ]
     },
@@ -297,11 +297,11 @@
       "metadata": {
         "id": "LsD7w9ok8qXu",
         "colab_type": "code",
+        "outputId": "bbcac2d0-a81a-4063-a651-78db1d68f2e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
-        },
-        "outputId": "6c6d7773-a0ab-4135-ec38-b5658b2f2993"
+          "height": 278
+        }
       },
       "source": [
         "# Filter out democrats\n",
@@ -309,7 +309,7 @@
         "dems_df = votes_df[is_dem]\n",
         "dems_df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +471,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 16
         }
       ]
     },
@@ -480,18 +480,18 @@
       "metadata": {
         "id": "xDmIEy9GAWuw",
         "colab_type": "code",
+        "outputId": "47fa8ade-2f81-4176-a7b2-70d74aff4e78",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
-        },
-        "outputId": "a12b35bb-c7c5-407c-9c88-781e822b3829"
+          "height": 278
+        }
       },
       "source": [
         "# Filter Republicans\n",
         "reps_df= votes_df[~is_dem]\n",
         "reps_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -653,7 +653,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 17
         }
       ]
     },
@@ -662,17 +662,17 @@
       "metadata": {
         "id": "-RJ7mWhbRuRT",
         "colab_type": "code",
+        "outputId": "586b1f66-0d29-4373-8b26-e13c2efffded",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3e8c6ba5-fd35-4284-dfc2-d483a0e8aecb"
+        }
       },
       "source": [
         "# Check percentage of a bill\n",
         "reps_df['education-spending'].mean()"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 18
         }
       ]
     },
@@ -693,16 +693,16 @@
       "metadata": {
         "id": "bD9DkI5jNKT5",
         "colab_type": "code",
+        "outputId": "7b949642-c13e-477b-b8aa-576c58557d67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3b1623db-7d21-4bad-9422-9430e30aba6c"
+        }
       },
       "source": [
         "dems_df['education-spending'].mean()"
       ],
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +714,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 19
         }
       ]
     },
@@ -723,16 +723,16 @@
       "metadata": {
         "id": "0UXfELAeNPc6",
         "colab_type": "code",
+        "outputId": "7ca822b4-97d3-4931-dff0-79abc73e755d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 352
-        },
-        "outputId": "db375f2f-a3e3-413e-e040-f1dd7527fed2"
+          "height": 372
+        }
       },
       "source": [
         "reps_df.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +948,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 20
         }
       ]
     },
@@ -957,16 +957,16 @@
       "metadata": {
         "id": "aRmr8YNPNlTc",
         "colab_type": "code",
+        "outputId": "d2e6017f-c413-47f7-9af6-2d65d3fc5d1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 352
-        },
-        "outputId": "74251927-4f0a-447f-9769-d4b8b3c0550d"
+          "height": 372
+        }
       },
       "source": [
         "dems_df.describe()"
       ],
-      "execution_count": 10,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1182,7 +1182,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 21
         }
       ]
     },
@@ -1228,16 +1228,16 @@
       "metadata": {
         "id": "ZjKkjt5vVf-v",
         "colab_type": "code",
+        "outputId": "e2f6abcc-e3a7-43ba-91f9-b772061314a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "6b20e9cc-0259-4efa-f1de-47a5f45a1813"
+        }
       },
       "source": [
         "dems, reps = get_votes(vote_split, \"adoption-of-the-budget-resolution\")"
       ],
-      "execution_count": 39,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,16 +1254,16 @@
       "metadata": {
         "id": "PUps5gERYcFs",
         "colab_type": "code",
+        "outputId": "04312d23-de7b-49f3-8e6c-427814e0a1a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c8d15fb7-1a5a-4de7-c45b-d3cc3f1d4ba9"
+        }
       },
       "source": [
-        "|ttest_ind(dems, reps, nan_policy='omit')"
+        "ttest_ind(dems, reps, nan_policy='omit')"
       ],
-      "execution_count": 29,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1275,7 +1275,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 24
         }
       ]
     },
@@ -1309,16 +1309,16 @@
       "metadata": {
         "id": "7-pWf9aJVq6x",
         "colab_type": "code",
+        "outputId": "2a095c2f-494d-46ec-9a30-34ac1c7f7add",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "98ff097e-ca16-4297-d334-712a5d735c30"
+        }
       },
       "source": [
         "dems, reps = get_votes(vote_split, \"education-spending\")"
       ],
-      "execution_count": 41,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1335,16 +1335,16 @@
       "metadata": {
         "id": "aDBRCyJWV8BI",
         "colab_type": "code",
+        "outputId": "fc34f760-94f1-4fa0-b57b-e05a23214edc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ff6134b0-b182-49f8-ef15-e0627a1f0a2d"
+        }
       },
       "source": [
         "ttest_ind(dems, reps, nan_policy='omit')"
       ],
-      "execution_count": 42,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1356,7 +1356,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 26
         }
       ]
     },
@@ -1390,16 +1390,16 @@
       "metadata": {
         "id": "va5diK90b11C",
         "colab_type": "code",
+        "outputId": "a3a84025-bb71-40ca-f762-8f87459d5418",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "6f92bd21-3edc-4185-ed62-2dbd417e9467"
+        }
       },
       "source": [
         "dems, reps = get_votes(vote_split, \"water-project-cost-sharing\")"
       ],
-      "execution_count": 43,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1416,16 +1416,16 @@
       "metadata": {
         "id": "084tlOhxa7KB",
         "colab_type": "code",
+        "outputId": "30451fb3-11e1-4429-8a54-fb7bf0c9844c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ada0e7ee-1121-48b0-e9d6-adbf15b626d2"
+        }
       },
       "source": [
         "ttest_ind(dems, reps, nan_policy='omit')"
       ],
-      "execution_count": 44,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1437,7 +1437,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 28
         }
       ]
     },
@@ -1503,23 +1503,23 @@
       "metadata": {
         "id": "pQYosAcHctPd",
         "colab_type": "code",
+        "outputId": "19cd5086-3fe8-4fe1-f922-21c090072171",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        },
-        "outputId": "54ef6d0e-9c7c-4938-f48c-a94e9c3f65eb"
+        }
       },
       "source": [
-        "run_ttest(dems_df, reps_df, \"immigration\", 0.5)"
+        "run_ttest(dems_df, reps_df, \"immigration\", 0.05)"
       ],
-      "execution_count": 54,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Left df mean = 0.47\n",
             "right df mean = 0.56\n",
-            "with a p_value of 0.08330248, we reject the null hypothesis\n"
+            "with a p_value of 0.08330248, we fail to reject the null hypothesis\n"
           ],
           "name": "stdout"
         }
