Completed main assignment

--- a/module2/LS_DS_122_Sampling_Confidence_Intervals_and_Hypothesis_Testing_Assignment.ipynb
+++ b/module2/LS_DS_122_Sampling_Confidence_Intervals_and_Hypothesis_Testing_Assignment.ipynb
@@ -803,14 +803,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 206
         },
-        "outputId": "6b16a6dd-1883-4a87-f6eb-41b875c4b608"
+        "outputId": "bf4cdd48-97a5-4774-82ea-8743214c10b8"
       },
       "source": [
-        "pd.crosstab(bank_df['education'], bank_df['marital'], margins = True)"
+        "marital_school_ct = pd.crosstab(bank_df['marital'], bank_df['education'], margins = True)\n",
+        "marital_school_ct"
       ],
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -833,14 +834,16 @@
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
-              "      <th>marital</th>\n",
-              "      <th>divorced</th>\n",
-              "      <th>married</th>\n",
-              "      <th>single</th>\n",
+              "      <th>education</th>\n",
+              "      <th>primary</th>\n",
+              "      <th>secondary</th>\n",
+              "      <th>tertiary</th>\n",
+              "      <th>unknown</th>\n",
               "      <th>All</th>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>education</th>\n",
+              "      <th>marital</th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -849,38 +852,35 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>primary</th>\n",
+              "      <th>divorced</th>\n",
               "      <td>79</td>\n",
-              "      <td>526</td>\n",
-              "      <td>73</td>\n",
-              "      <td>678</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>secondary</th>\n",
               "      <td>270</td>\n",
-              "      <td>1427</td>\n",
-              "      <td>609</td>\n",
-              "      <td>2306</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>tertiary</th>\n",
               "      <td>155</td>\n",
-              "      <td>727</td>\n",
-              "      <td>468</td>\n",
-              "      <td>1350</td>\n",
+              "      <td>24</td>\n",
+              "      <td>528</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>unknown</th>\n",
-              "      <td>24</td>\n",
+              "      <th>married</th>\n",
+              "      <td>526</td>\n",
+              "      <td>1427</td>\n",
+              "      <td>727</td>\n",
               "      <td>117</td>\n",
+              "      <td>2797</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>single</th>\n",
+              "      <td>73</td>\n",
+              "      <td>609</td>\n",
+              "      <td>468</td>\n",
               "      <td>46</td>\n",
-              "      <td>187</td>\n",
+              "      <td>1196</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>All</th>\n",
-              "      <td>528</td>\n",
-              "      <td>2797</td>\n",
-              "      <td>1196</td>\n",
+              "      <td>678</td>\n",
+              "      <td>2306</td>\n",
+              "      <td>1350</td>\n",
+              "      <td>187</td>\n",
               "      <td>4521</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -888,20 +888,373 @@
               "</div>"
             ],
             "text/plain": [
-              "marital    divorced  married  single   All\n",
-              "education                                 \n",
-              "primary          79      526      73   678\n",
-              "secondary       270     1427     609  2306\n",
-              "tertiary        155      727     468  1350\n",
-              "unknown          24      117      46   187\n",
-              "All             528     2797    1196  4521"
+              "education  primary  secondary  tertiary  unknown   All\n",
+              "marital                                               \n",
+              "divorced        79        270       155       24   528\n",
+              "married        526       1427       727      117  2797\n",
+              "single          73        609       468       46  1196\n",
+              "All            678       2306      1350      187  4521"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 36
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V0AMibzr0huo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "observed = np.array(pd.crosstab(bank_df['marital'], bank_df['education']))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EIsjrqUBwMQg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ca999980-cb90-4e9c-99b6-d9e6afb174c5"
+      },
+      "source": [
+        "row_total = marital_school_ct.iloc[0:3,4].values\n",
+        "print(row_total)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 528 2797 1196]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cAOwZcX-xXXR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "dee810e3-1eb4-4694-c608-2baeaed54c10"
+      },
+      "source": [
+        "col_total = marital_school_ct.iloc[3,0:4].values\n",
+        "print(col_total)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 678 2306 1350  187]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6O2RQyutx7uF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6e1482c4-bf60-45a2-d5ec-34419bf119e7"
+      },
+      "source": [
+        "total = marital_school_ct.loc['All', 'All']\n",
+        "print(total)"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4521\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IuPMmoQXyRhU",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Expected\n",
+        "Following the formula:\n",
+        "$$ \\rm{expected}_{i,\\,j} = \\frac{\\left(\\rm{row\\,total} \\right)_i \\left(\\rm{column \\,total} \\right)_j }{\\rm{total}} $$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qjoht9e4z1_f",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def get_expected(row_sums, col_sums, total):\n",
+        "\n",
+        "  expected = []\n",
+        "  for i in range(len(row_sums)):\n",
+        "      expected_row = []\n",
+        "      for column in col_sums:\n",
+        "          expected_val = column*row_sums[i]/total\n",
+        "          expected_row.append(expected_val)\n",
+        "      expected.append(expected_row)\n",
+        "      \n",
+        "  expected = np.array(expected)\n",
+        "  return expected\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pDciDK6z0JGb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "4b9ec098-57ee-4865-b40a-0a9f70c77cf1"
+      },
+      "source": [
+        "expected = get_expected(row_total, col_total, total)\n",
+        "expected"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  79.18248175,  269.31386861,  157.66423358,   21.83941606],\n",
+              "       [ 419.45719973, 1426.64941385,  835.20238885,  115.69099757],\n",
+              "       [ 179.36031851,  610.03671754,  357.13337757,   49.46958637]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PRHlOFiW0UTn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "outputId": "c6f67a4d-03e6-4521-baa1-9ff20488ff67"
+      },
+      "source": [
+        "marital_school_ct_no_margin"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>education</th>\n",
+              "      <th>primary</th>\n",
+              "      <th>secondary</th>\n",
+              "      <th>tertiary</th>\n",
+              "      <th>unknown</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>marital</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>divorced</th>\n",
+              "      <td>79</td>\n",
+              "      <td>270</td>\n",
+              "      <td>155</td>\n",
+              "      <td>24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>married</th>\n",
+              "      <td>526</td>\n",
+              "      <td>1427</td>\n",
+              "      <td>727</td>\n",
+              "      <td>117</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>single</th>\n",
+              "      <td>73</td>\n",
+              "      <td>609</td>\n",
+              "      <td>468</td>\n",
+              "      <td>46</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "education  primary  secondary  tertiary  unknown\n",
+              "marital                                         \n",
+              "divorced        79        270       155       24\n",
+              "married        526       1427       727      117\n",
+              "single          73        609       468       46"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6WOesV-g1Eee",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "60e726b9-b1eb-40f6-cb64-e4128c5d62a0"
+      },
+      "source": [
+        "# Array broadcasting will work with numpy arrays but not python lists\n",
+        "chi_squared = ((observed - expected)**2/(expected)).sum() \n",
+        "print(f\"Chi-Squared: {chi_squared}\")"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Chi-Squared: 139.0891646557848\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yMWrSecO2FDq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8b63483b-6689-4bc9-a1bb-acfc7c31418a"
+      },
+      "source": [
+        "# Calculate Degrees of Freedom\n",
+        "dof = (len(row_total)-1)*(len(col_total)-1)\n",
+        "print(f\"Degrees of Freedom: {dof}\")"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Degrees of Freedom: 6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4oyGcxXN2MEy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        },
+        "outputId": "1090a464-b547-4235-8b89-291047f52b5b"
+      },
+      "source": [
+        "chi_squared, p_value, dof, expected = stats.chi2_contingency(observed)\n",
+        "\n",
+        "print(f\"Chi-Squared: {chi_squared}\")\n",
+        "print(f\"P-value: {p_value}\")\n",
+        "print(f\"Degrees of Freedom: {dof}\") \n",
+        "print(\"Expected: \\n\", np.array(expected))"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Chi-Squared: 139.0891646557848\n",
+            "P-value: 1.5601136823389665e-27\n",
+            "Degrees of Freedom: 6\n",
+            "Expected: \n",
+            " [[  79.18248175  269.31386861  157.66423358   21.83941606]\n",
+            " [ 419.45719973 1426.64941385  835.20238885  115.69099757]\n",
+            " [ 179.36031851  610.03671754  357.13337757   49.46958637]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NFyNuak42nZV",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Conclusion\n",
+        "with a $p$ value of of $1.56 \\times 10^{-27}$, we reject the null hypothesis that the rows and columns are independent"
       ]
     },
     {
