working on assignment 3

--- a/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
+++ b/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
@@ -7,16 +7,16 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "python38164bitdatadndvenv360da9b8525a4825bc00085a5f9af877",
+      "display_name": "Python 3.8.1 64-bit ('data_dnd': venv)"
     }
   },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "H7OLbevlbd_Z",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "H7OLbevlbd_Z"
       },
       "source": [
         "# Lambda School Data Science Module 123\n",
@@ -29,8 +29,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "P-DzzRk5bf0z",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "P-DzzRk5bf0z"
       },
       "source": [
         "## Assignment - Code it up!\n",
@@ -63,23 +63,55 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xpVhZyUnbf7o",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# TODO - code!"
+      "cell_type": "markdown",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-5-16995e9039dc>, line 3)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-16995e9039dc>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    $ P(A|B) = /frac{P(B|A) /times P(A)}{P)B}$\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
       ],
-      "execution_count": 0,
-      "outputs": []
+      "source": [
+        "## Bayes Theorem\n",
+        "\n",
+        "$$ P(A|B) = \\frac{P(B|A) \\times P(A)}{P(B)}$$\n",
+        "\n",
+        "The probability of A given B is equal to the product of probability of B given A multiplied by the probability of A all over the probability of B\n",
+        "\n",
+        "if $P(A)$ is the probability that someone is a drug user, and $P(B)$ is the probability of getting a positive result, we can figure out the probability that a drug user will have a positive result.\n",
+        "\n",
+        "* Given:\n",
+        "  * Probability of a drug user testing positive = 1\n",
+        "  * Probability of a non-drug user testing positive = .01\n",
+        "  * Probability of someone being a drug user = 1/200\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# TODO - code!\n",
+        "def bayes(p_a, p_b, p_not_b, num_tests):\n",
+        "    p_b_given_a = p_b * p_a\n",
+        "    numerator = p_b_given_a * p_a\n",
+        "\n",
+        "    # Add probability of user + with non-user+\n",
+        "\n",
+        "    numerator + ((p_not_b * (1-p_a)))"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uWgWjp3PQ3Sq",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "uWgWjp3PQ3Sq"
       },
       "source": [
         "## Resources"
@@ -88,8 +120,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QRgHqmYIQ9qn",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "QRgHqmYIQ9qn"
       },
       "source": [
         "- [Worked example of Bayes rule calculation](https://en.wikipedia.org/wiki/Bayes'_theorem#Examples) (helpful as it fully breaks out the denominator)\n",
@@ -99,8 +131,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GP7Jv1XvwtkX",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "GP7Jv1XvwtkX"
       },
       "source": [
         "## Stretch Goals:\n",
@@ -113,16 +145,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "iDi0eFr1x-v_",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "iDi0eFr1x-v_"
       },
+      "outputs": [],
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     }
   ]
 }
