--- a/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
+++ b/module3/LS_DS_123_Introduction_to_Bayesian_Inference_Assignment.ipynb
@@ -7,8 +7,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "name": "python38164bitdatadndvenv360da9b8525a4825bc00085a5f9af877",
-      "display_name": "Python 3.8.1 64-bit ('data_dnd': venv)"
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -85,6 +85,7 @@
         "\n",
         "if $P(A)$ is the probability that someone is a drug user, and $P(B)$ is the probability of getting a positive result, we can figure out the probability that a drug user will have a positive result.\n",
         "\n",
+        "### Drug Tests\n",
         "* Given:\n",
         "  * Probability of a drug user testing positive = 1\n",
         "  * Probability of a non-drug user testing positive = .01\n",
@@ -93,18 +94,149 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
         "# TODO - code!\n",
-        "def bayes(p_a, p_b, p_not_b, num_tests):\n",
-        "    p_b_given_a = p_b * p_a\n",
-        "    numerator = p_b_given_a * p_a\n",
+        "def bayes_testing(\n",
+        "    prior, \n",
+        "    sensitivity, \n",
+        "    specificity, \n",
+        "    num_tests = 1):\n",
+        "    p_b_given_a = sensitivity \n",
+        "    numerator = p_b_given_a * prior\n",
         "\n",
         "    # Add probability of user + with non-user+\n",
         "\n",
-        "    numerator + ((p_not_b * (1-p_a)))"
+        "    denominator = numerator + ((specificity * (1-prior)))\n",
+        "    result = numerator / denominator\n",
+        "    num_tests -= 1\n",
+        "    if num_tests > 0:\n",
+        "        return bayes(result, sensitivity, specificity, num_tests)\n",
+        "    else:\n",
+        "        return result\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "0.33444816053511706"
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "bayes_testing(1/200,1,.01, 1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#### Result\n",
+        "The probability of a randomly selected individual with a positive result is a drug user is $33.4\\%$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Drunk Driving\n",
+        "You should only truly need these two values in order to apply Bayes Theorem. In this example, imagine that individuals are taking a breathalyzer test with an 8% false positive rate, a 100% true positive rate, and that our prior belief about drunk driving in the population is 1/1000. \n",
+        " - What is the probability that a person is drunk after one positive breathalyzer test?\n",
+        " - What is the probability that a person is drunk after two positive breathalyzer tests?\n",
+        " - How many positive breathalyzer tests are needed in order to have a probability that's greater than 95% that a person is drunk beyond the legal limit?\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "0.012357884330202669"
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "prior = 1/1000\n",
+        "sensitivity = 1\n",
+        "specificity = .08\n",
+        "\n",
+        "bayes_testing(prior, sensitivity, specificity, 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "0.13525210993291495"
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "bayes_testing(prior, sensitivity, specificity, 2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def bayes_loop(a, b, c):\n",
+        "\n",
+        "    probability = a\n",
+        "    for i in range(1,1000):\n",
+        "        probability = bayes_testing(probability, b, c)\n",
+        "        print(probability)\n",
+        "        if probability >= .95:\n",
+        "            \n",
+        "            return i"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "0.012357884330202669\n0.13525210993291495\n0.6615996951348605\n0.9606895076105054\n"
+        },
+        {
+          "data": {
+            "text/plain": "4"
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "bayes_loop(prior, sensitivity, specificity)"
       ]
     },
     {
